# cpu-vs-gpu-sorting-algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_sort.cpp  utils.h
cpu_parallel/: CMakeLists.txt  merge_sort.h  quick_sort.h
cpu_sequential/: CMakeLists.txt  merge_sort.cpp  merge_sort.h  quick_sort.h  std_sort.cpp  std_sort.h
gpu/: CMakeLists.txt  merge_sort.cu  merge_sort.cuh  merge_sort.h
sequential_cpu/: merge_sort.h
tests/: CMakeLists.txt  test_merge_sort.cpp  test_sort.cpp
